--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -38,13 +38,7 @@ header {
     @apply mr-auto;
   }
   input{
-  @apply block w-120 mt-2 mb-4 p-2 border border-gray-300
-         focus:border-blue-500
-         focus:ring-0
-         focus:outline-none
-         rounded
-         
-         ;
+  @apply block w-full mt-2 mb-2 p-2 border border-gray-300 focus:border-blue-500 focus:ring-0 focus:outline-none rounded;
 }
 }
 
@@ -217,5 +211,5 @@ form {
 }
 
 .inpustyle{
-    @apply block w-full mt-2 mb-4 p-2 bg-white;
+    @apply w-full mt-2 mb-4 p-2 bg-white border-blue-400;
 }
